[project]
name = "hackmit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "flask>=3.0.0",
    "aiohttp>=3.8.0",
    "quart>=0.20.0",
    "hypercorn>=0.17.3",
    "matplotlib>=3.10.6",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.1.1",
]
